# cdp-scrapers

./: .buildinfo  .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Houston.py  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  SeattleScraperGetVideoUris.ipynb  calendar_scraper.ipynb  cdp_scrapers.bin.html  cdp_scrapers.html  cdp_scrapers.instances.empty.get_events.html  cdp_scrapers.instances.html  cdp_scrapers.legistar_utils.LegistarScraper.html  contributing.html  convert_kunyang.py  convert_sample.py  example-cdp-event.json  finding_legistar_id.html  finding_legistar_id.md  genindex.html  index.html  installation.html  legistar_scraper.html  manual.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  request_test.py  scraper.py  scraper_minn.py  search.html  searchindex.js  setup.cfg  setup.py  (+2 more)
.doctrees/: cdp_scrapers.doctree  cdp_scrapers.instances.doctree  cdp_scrapers.instances.empty.get_events.doctree  cdp_scrapers.legistar_utils.LegistarScraper.doctree  contributing.doctree  environment.pickle  finding_legistar_id.doctree  index.doctree  installation.doctree  legistar_scraper.doctree  modules.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-main.yml  ci.yml  docs.yml  get-events.yml  test-and-lint.yml  test-scraper.yml
.github/workflows/scripts/: run-scraper.py  test_scraper.py
_modules/: cdp_scrapers.html  index.html
_modules/cdp_scrapers/: example.html  legistar_utils.html  prime_gov_utils.html  scraper_utils.html  types.html  youtube_utils.html
_modules/cdp_scrapers/instances/: atlanta.html  empty.html  houston.html  kingcounty.html  lacity.html  portland.html  seattle.html
_sources/: cdp_scrapers.bin.rst.txt  cdp_scrapers.instances.empty.get_events.rst.txt  cdp_scrapers.instances.rst.txt  cdp_scrapers.legistar_utils.LegistarScraper.rst.txt  cdp_scrapers.rst.txt  finding_legistar_id.rst.txt  index.rst.txt
_static/: documentation_options.js
cdp_scrapers/: README.md  __init__.py  btn_givennames_synonyms.txt  civic_scraper_utils.py  finding_legistar_id.md  individual_scraper.ipynb  legistar_content_parsers.py  legistar_utils.py  prime_gov_utils.py  scraper_utils.py  static_data.md  types.py  youtube_utils.py
cdp_scrapers/instances/: __init__.py  atlanta.py  atlanta_temp.py  empty.py  houston.py  kingcounty-static.json  kingcounty.py  lacity.py  portland-static.json  portland.py  seattle-static.json  seattle.py
cdp_scrapers/tests/: __init__.py  legistar_content_parser_test.py  scraper-tests.py  scraper_tests.py  scraper_util_tests.py  test_civic_scraper_utils.py  test_function.py  test_prime_gov_agenda_scraper.py  test_prime_gov_utils.py  test_scraper_utils.py  test_scrapers.py  test_youtube_scraper.py
docs/: Makefile  conf.py  finding_legistar_id.md  finding_legistar_id.rst  index.rst  installation.rst  legistar_scraper.md  legistar_scraper.rst  make.bat  modules.rst
